# ostruka

./: .gitignore  Cargo.toml  README.md  config.toml  main.rs
src/: commands.rs  config.rs  instance.rs  lib.rs  main.rs  ui.rs
