[package]
name = "ostruka"
version = "0.1.0"
authors = ["mikelma <mikelma7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ostruka-core = { git = "https://github.com/mikelma/ostruka-core" }
ostrich-core = { git = "https://github.com/mikelma/ostrich-core" }
openssl = { version = "0.10", features = ["vendored"] }
tui = "0.5"
termion = "1.5"
crossterm = "0.14.1"
chrono = "0.4"
sha1 = "0.6"
tokio = { version = "0.2", features = ["full"] }
